[gd_scene load_steps=12 format=3 uid="uid://dqvi1a5mckuxw"]

[ext_resource type="Script" uid="uid://dmewrtpb8nicj" path="res://Scripts/spikes.gd" id="1_mmke3"]
[ext_resource type="Texture2D" uid="uid://ccwraf5l2nxtk" path="res://assets/spritesandtiles/Dungeon Tile Set.png" id="2_y722w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gwck6"]
atlas = ExtResource("2_y722w")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uvme"]
atlas = ExtResource("2_y722w")
region = Rect2(32, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n70j0"]
atlas = ExtResource("2_y722w")
region = Rect2(80, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_baso2"]
atlas = ExtResource("2_y722w")
region = Rect2(96, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijug2"]
atlas = ExtResource("2_y722w")
region = Rect2(48, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb5fb"]
atlas = ExtResource("2_y722w")
region = Rect2(64, 224, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yuy0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwck6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uvme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n70j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baso2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijug2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb5fb")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qqtr"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmke3"]
size = Vector2(20, 12)

[node name="Spike" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_mmke3")

[node name="SpikeSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yuy0u")

[node name="SpikeHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_0qqtr")

[node name="Area2D" type="Area2D" parent="."]

[node name="SpikeHurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.25, 4)
shape = SubResource("RectangleShape2D_mmke3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
